CFS-13-FE/FEI/BE: Surveyor Response Tab (#81)
* feat: initial commit

* refactor: current survey endpoints

* wip: on-going

* wip: on-going

* wip: on-going

* feat: added survey list

* wip: on-going

* wip: on-going

* wip: on-going

* feat: added analytics section

* feat: initial completion of mobile view

* fix: count bug

* wip: on-going

* feat: initial completion

* refactor: removed unused type for survey coverage

* fix: minor issues

* fix: added border color
